# heimdali

./: .gitignore  .travis.yml  CHANGELOG  CMakeLists.txt  README.md
bench/: README  bench_hconv.py
bench/hconv/: Makefile  create_input_images.py  plot_times.py  run_bench.sh
cmd/: CMakeLists.txt  ad.cxx  asm.cxx  bi.cxx  car.cxx  carflo.cxx  cco.cxx  ce.cxx  cim.cxx  cli.cxx  cli.hxx  cmdreader.hxx  cmdreader.txx  cmdwriter.hxx  cmdwriter.txx  conv.cxx  ddf.cxx  detc.cxx  di.cxx  exp.cxx  extg.cxx  fixflo.cxx  flofix.cxx  fmoy.cxx  fzoom.cxx  h5toinr.cxx  hconv.cxx  heimdali-convert.cxx  heiminfo.cxx  ical.cxx  idf.cxx  inrinfo.cxx  inrtoh5.cxx  itest.cxx  izoom.cxx  lo.cxx  logic.cxx  ma.cxx  max.cxx  mb.cxx  (+26 more)
conda-recipe/: build.sh  meta.yaml
conda-recipe/fftw/: build.sh  meta.yaml
conda-recipe/gfortran/: build.sh  main.f90  meta.yaml
conda-recipe/hdf5_cxx/: build.sh  configure.txt  meta.yaml
conda-recipe/heimdali/: build.sh  meta.yaml
conda-recipe/inrimage/: build.sh  meta.yaml  return_type_is_void.patch
conda-recipe/itk/: build.sh  meta.yaml
conda-recipe/itk-heimdali/: README.md  config.cmake.linux  config.cmake.osx  meta.yaml
conda-recipe/itk-heimdali-dbg/: build.sh  config.cmake.linux  config.cmake.osx  meta.yaml
conda-recipe/libgfortran/: build.sh  hello_gfortran  meta.yaml
conda-recipe/libinrimage/: a-1o-s.inr  build.sh  meta.yaml
conda-recipe/libinrimage-dbg/: build.sh  configure.txt  fix_macosx_environ.patch  meta.yaml
conda-recipe/libxaw/: build.sh  meta.yaml
conda-recipe/tclap/: meta.yaml
doc/: Makefile  arithmetic.rst  ccache.rst  conf.py  develop.rst  documentation.rst  examples.rst  extg.rst  fixed_point.rst  from_inrimage.rst  h5toinr.rst  index.rst  inrtoh5.rst  install.rst  local_arithmetic.rst  make.bat  melg.rst  options.rst  par.rst  raz.rst  release.rst  write_example_tarballs.py
doc/cmd/: cco.rst  cim.rst  fzoom.rst  tpr.rst
doxyxml/: Makefile  heimdali.config
example/: CMakeLists.txt  createInputImage.cxx  inrimage.cxx  inrimage_read.cxx  inrimage_write.cxx
example/create_input_image/: CMakeLists.txt
example/inrimage_iterators/: main.cxx
example/inrimage_write/: CMakeLists.txt  main.cxx
itkINRimageIO/: CMakeLists.txt
itkINRimageIO/include/: itkINRImageIO.h  itkINRImageIOFactory.h  itkINRPlugin.h
itkINRimageIO/pytest/: test_reader.py  test_reader_region.py  test_writer.py
itkINRimageIO/pytest/lib/: numpytestcase.py
itkINRimageIO/pytest/test_input/: reader.py  reader_region.py  writer.py
itkINRimageIO/src/: CMakeLists.txt  itkINRImageIO.cxx  itkINRImageIOFactory.cxx  itkINRPlugin.cxx
itk_package_config/: heimdali-config-develop.cmake.in  heimdali-config-version.cmake.in  heimdali-config.cmake.in
libheimdali/: CMakeLists.txt  cli.cxx  cmdhelper.cxx  itkhelper.cxx  redirect_stdout.cxx  regionreader.cxx  util.cxx
libheimdali/heimdali/: cli.hxx  cmdhelper.hxx  cmdreader.hxx  cmdreader.txx  cmdwriter.hxx  cmdwriter.txx  error.hxx  inrimage.hxx  inrimage.txx  itkhelper.hxx  redirect_stdout.hxx  regionreader.hxx  util.hxx  version.hxx
python/: heimdali.py
script/: develop_heimali_bash.sh  develop_heimdali_bash.sh
tests/features/: ad.feature  asm.feature  bi.feature  car.feature  carflo.feature  cco.feature  ce.feature  cim.feature  conv.feature  createInputImage.feature  ddf.feature  detc.feature  di.feature  dmo.feature  exp.feature  extg.feature  fixflo.feature  flofix.feature  fmoy.feature  fzoom.feature  hconv.feature  heimdali-convert.feature  ical.feature  idf.feature  imo.feature  inrimage.feature  inrtoh5.feature  itest.feature  izoom.feature  lo.feature  logic.feature  ma.feature  max.feature  mb.feature  med.feature  melg.feature  mh.feature  min.feature  mo.feature  mu.feature  (+22 more)
